# mihask.github.io

./: Makefile  _config.yml  about.markdown  pyproject.toml
_drafts/: multi-comparisons.md  useful_links.md
_includes/: social.html
_posts/: 2023-06-13-json-embeddings.markdown  2023-08-15-python_on_new_mac.markdown  2024-06-13-welcome-to-jekyll.markdown
