[tool.poetry]
name = "mihask-github-io"
version = "0.1.0"
description = ""
authors = ["Mihas <mihasK@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "mihask"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
jekyllnb = "^0.3.1"
lxml = {version = "^5.2.2", extras = ["html_clean"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
